# renderer-from-scratch

./: CMakeLists.txt  README.md
res/textures/: african_head_diffuse.ppm  half_life_box.ppm  test_texture.ppm
src/: main.cpp
src/Camera/: Camera.cpp  Camera.hpp
src/Color/: Color.cpp  Color.hpp
src/Image/: Image.cpp  Image.hpp
src/Light/: DirectionalLight.cpp  DirectionalLight.hpp  Light.cpp  Light.hpp
src/Mesh/: Mesh.cpp  Mesh.hpp
src/Model/: Model.cpp  Model.hpp
src/Renderer/: Renderer.cpp  Renderer.hpp
src/Scene/: Scene.cpp  Scene.hpp
src/Texture/: Texture.cpp  Texture.hpp
src/Window/: Window.cpp  Window.hpp
src/utils/: color.hpp  constants.hpp  to_radians.hpp  vec.hpp
src/utils/Color/: Color.cpp  Color.hpp
src/utils/mat/: mat.hpp
src/utils/vec/: vec.hpp  vec2.hpp  vec3.hpp  vec4.hpp
